--------------------------------------------------------------------------
---------                  Ampache -- CHANGELOG                  ---------   
--------------------------------------------------------------------------

--------------------------------------------------------------------------
  v.3.3.2
	- Fixed an issue with the MPD Controller not passing the password
		to the MPD class causing flames to shoot out if your MPD
		had a password set
  	- Fixed issue with transcoding not changing the mime type or the
		filename, currently hardcodes to mp3 and audio/mpeg
  	- Updated Spanish Translation (Thx Bgordon)
	- Fixed potential for a foreach() error on vainfo if no tags are
		found, and fixed quicktime (mp4) tag reading
  	- Fixed the CSS for now playing, with multiple entries it turned
		into modern art. 
  	- Fixed issue with Keywords search that cropped up when I removed
		the checkboxes. 

--------------------------------------------------------------------------
  v.3.3.2-Beta3
  	- Fixed file-based parsing so that it can now be given priority
		over the tags in the files using tag_order in the config
		file
  	- Fixed Nowplaying, now div based layout and AJAX refreshed
		based on config files refresh_limit
  	- Moved /modules/init.php to /lib/init.php
	- Removed Checkboxes from Search page and added ability to 
		search on Comment and Rating
  	- Fixed a missing close tag on the catalog build if ampache was
		unable to get the filesize of a file
  	- Fixed link to Statistics page, user link has been missing
		since the new interface was put into place
  	- Added new getid3() wrapper (vainfo) should resolve the
		id3 tags in oggs issue that some people were having
		and makes file only tag basis possible. requires
		and update to your ampache.cfg.php
  	- Fixed Transcoding logic issue and added preset line for
		transcoding flac files in .dist file (Defaulted to Off)
  	- Upgraded to Getid3() 1.7.6