@@ -1,7 +1,7 @@
 <?php
 /*
 
- Copyright (c) 2004 Ampache.org
+ Copyright (c) 2001 - 2006 Ampache.org
  All rights reserved.
 
  This program is free software; you can redistribute it and/or
@@ -22,44 +22,41 @@
 
 /*!
 	@header Add Access List Entry
-	A template file
-
 */
-
 ?>
-
-<p style="font-size: 10pt; font-weight: bold;"><?php echo _("Add Access for a Host"); ?></p>
-<p><?php echo _("Use the form below to add a host that you want to have access to your Ampache catalog."); ?></p>
+<div class="text-box">
+<p style="font-size: 10pt; font-weight: bold;"><?php echo _('Add Access for a Host'); ?></p>
+<p><?php echo _('Use the form below to add a host that you want to have access to your Ampache catalog.'); ?></p>
 
 
 <form name="update_catalog" method="post" enctype="multipart/form-data" action="<?php echo conf('web_path'); ?>/admin/access.php">
 <table cellpadding="5" cellspacing="0" border="0">
 <tr>
-	<td><?php echo _("Name"); ?>: </td>
+	<td><?php echo _('Name'); ?>: </td>
 	<td>
 		<input type="text" name="name" value="<?php echo $_REQUEST['name']; ?>" size="30" />
 	</td>
 </tr>
 <tr>
-	<td><?php echo _("Start IP Address"); ?>:</td>
+	<td><?php echo _('Start IP Address'); ?>:</td>
 	<td>
 		<input type="text" name="start" value="<?php echo $_REQUEST['start']; ?>" size="20" maxlength="15" />
 	</td>
 </tr>
 <tr>
-	<td><?php echo _("End IP Address"); ?>:</td>
+	<td><?php echo _('End IP Address'); ?>:</td>
 	<td>
 		<input type="text" name="end" value="<?php echo $_REQUEST['end']; ?>" size="20" maxlength="15" />
 	</td>
 </tr>
 <tr>
-	<td><?php echo _("Level"); ?>:</td>
+	<td><?php echo _('Level'); ?>:</td>
 	<td>
 		<select name="level">
-			<option selected="selected" value="5" >Demo</option>
-			<option value="25">Stream</option>
-			<option value="50">Stream/Download</option>
-			<option value="75">XML-RPC</option>
+			<option selected="selected" value="5" ><?php echo _('Demo'); ?></option>
+			<option value="25"><?php echo _('Stream'); ?></option>
+			<option value="50"><?php echo _('Stream/Download'); ?></option>
+			<option value="75"><?php echo _('XML-RPC'); ?></option>
 		</select>
 	</td>
 </tr>
@@ -67,8 +64,9 @@
 	<td>&nbsp;</td>
 	<td>
 		<input type="hidden" name="action" value="add_host" />
-		<input type="submit" value="<?php echo _("Add Host"); ?>" />
+		<input type="submit" value="<?php echo _('Add Host'); ?>" />
 	</td>
 </tr>
 </table>
 </form>
+</div>
